k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-app
  template:
    metadata:
      labels:
        app: astro-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: astro
          image: ghcr.io/nyaksik/video-converter:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: astro-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: astro-service
spec:
  selector:
    app: astro-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
